[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "internal"
version = "0.1.0"
description = "RecipeDex Backend"
requires-python = ">=3.13"
authors = [
  {name = "RecipeDex", email = "recipedex.website@gmail.com"},
]
maintainers = [
  {name = "RecipeDex", email = "recipedex.website@gmail.com"},
]
keywords = ["recipe", "agent", "website"]
classifiers = [
  "Programming Language :: Python"
]
